# ftp-client-server

./: README.md
client/: CMakeLists.txt  CMakePresets.json  Makefile
client/inc/ftp/: command_handler.hpp  connection.hpp  data_transfer.hpp  session.hpp
client/src/: main.cpp
client/src/ftp/: command_handler.cpp  connection.cpp  data_transfer.cpp  session.cpp
server/: CMakeLists.txt  Makefile
server/inc/ftp/: dtp.hpp  instance.hpp  pi.hpp  server.hpp
server/src/: main.cpp
server/src/ftp/: dtp.cpp  instance.cpp  pi.cpp  server.cpp
